--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
 		"@types/angular-material": "latest",
 		"@types/angular-route": "latest",
 		"@types/node": "^7.0.22",
+		"@types/underscore": "^1.8.9",
 		"angular": "latest",
 		"angular-animate": "latest",
-		"angular-messages": "latest",
 		"angular-aria": "latest",
 		"angular-hammer": "^2.2.0",
 		"angular-material": "latest",
+		"angular-messages": "latest",
 		"angular-route": "latest",
-		"hammerjs": "^2.0.8"
+		"hammerjs": "^2.0.8",
+		"underscore": "^1.9.1"
 	},
 	"devDependencies": {
 		"awesome-typescript-loader": "3.1.3",
